[package]
edition = "2021"
name = "table_controller"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.5.0", path = "../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", path = "../embassy/embassy-rp", features = ["defmt", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.1.0", path = "../embassy/embassy-usb", features = ["defmt", "usbd-hid"] }
embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures", features = ["defmt"] }

defmt = "0.3.3"
defmt-rtt = "0.4"
usbd-hid = "0.6.1"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

[profile.release]
debug = 2
